Adjusting commands and the first interaction

--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "Wordle Bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "register": "node deploy-commands.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Danilo Uema",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "^0.3.0",
+    "discord-api-types": "^0.29.0",
     "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "eslint": "^8.11.0"
